--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
             <url>https://maven.citizensnpcs.co/repo</url>
         </repository>
         <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
             <id>FreneticLLC-public</id>
             <name>FreneticLLC Maven Server</name>
             <url>https://maven.freneticllc.com/</url>
@@ -88,7 +92,7 @@
             <artifactId>factions</artifactId>
             <version>2.8.21</version>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/Factions.jar</systemPath>
+            <systemPath>${basedir}/lib/SaberFactions.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.massivecraft</groupId>
